[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-queryparams-handler"
version = "0.1.0"
description = "Django middleware for validating and type-casting URL query parameters"
requires-python = ">=3.8"
authors = [
  {name = "Shiva Kumar K", email = "kshivakumar@outlook.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Django",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "Django>=4.2"
]

[project.urls]
"Homepage" = "https://github.com/kshivakumar/django-queryparams-handler"
"Bug Reports" = "https://github.com/kshivakumar/django-queryparams-handler/issues"
"Source" = "https://github.com/kshivakumar/django-queryparams-handler"
